# boris

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
models/livekit/: boris.onnx
models/piper/: .gitkeep
models/whisper/: .gitkeep
src/: config.rs  constants.rs  logger.rs  main.rs  utils.rs
src/audio/: adapter.rs  boris.rs  buffer.rs  filters.rs  mod.rs  playback.rs  resampler.rs  stream.rs  whisper.rs
src/services/: mod.rs  openai.rs  tts.rs
