[package]
name = "boris"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
cpal = "0.17.3"
rubato = "3.0.0"
hound = "3.5.1"
livekit-wakeword = { git = "https://github.com/blocksdevpro/rust-sdks"}
earshot = "1.1.0"
whisper-rs = "0.16.0"
whisper-rs-sys = "0.15.0"

reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
piper-rs = "0.2.0"
log = "0.4.30"
env_logger = "0.11.10"
